# hydrofoil

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  codecov.yml  compose.yaml  justfile  links.md  package-lock.json  package.json  taplo.toml  typos.toml
.config/: nextest.toml
.github/workflows/: ci.yml  docker-release.yml  marimo-release.yml  pr-title.yml
app/src-tauri/: Cargo.toml
config/: README.md
config/certificates/: .gitignore  (+3 more)
crates/cedar-oci/: Cargo.toml
crates/cedar-oci/src/: proto.rs
crates/cedar-oci/src/oci/: mod.rs
crates/client/: Cargo.toml
crates/client/examples/: azurite_roundtrip.rs
crates/client/src/: error.rs  lib.rs
crates/client/src/commands/: batch_sizer.rs  create_delta.rs  ingest.rs  ingrest.rs  mod.rs
crates/client/src/tpcds/: mod.rs
crates/client/tests/: large_batch_roundtrip.rs
crates/common/: Cargo.toml
crates/common/src/: conversion.rs  lib.rs
crates/datafusion/: Cargo.toml
crates/datafusion-cedar/: Cargo.toml
crates/datafusion-cedar/examples/: fact_gathering_walkthrough.rs
crates/datafusion-cedar/src/: cedar.rs  fact_store.rs  facts.rs  govern.rs  lib.rs  policy.rs  principal.rs  translate.rs  visitor.rs
crates/datafusion/src/: lib.rs
crates/datafusion/src/catalog/unity/: provider.rs
crates/datafusion/src/sql/: mod.rs  parser.rs
crates/datafusion/src/sql/commands/: mod.rs  vacuum.rs
crates/datafusion/src/sql/unity/: catalogs.rs  exec.rs  mod.rs  schemas.rs  tables.rs
crates/datafusion/src/storage/: routing.rs
crates/datafusion/tests/: unity_resolve.rs
crates/desktop-host/: Cargo.toml
crates/desktop-host/src/: lib.rs
crates/env-modules/: Cargo.toml
crates/env-modules/src/: capability.rs  effect.rs  generate.rs  lib.rs  model.rs  resolve.rs  topology.rs
crates/hydrofoil/: Cargo.toml  Dockerfile  README.md  buf.gen.yaml
crates/hydrofoil/src/: agent.rs  config.rs  engine.rs  error.rs  execution.rs  external_tables.rs  http.rs  identity.rs  ingest_service.rs  lib.rs  lineage.rs  main.rs  policy.rs  query.rs  query_service.rs  server.rs  session.rs  storage.rs  stream.rs  telemetry.rs
crates/hydrofoil/src/catalog/: external_table.rs  iceberg.rs  mod.rs  schema.rs  tags.rs  unity.rs
crates/hydrofoil/src/planner/: delta.rs  flight.rs  mod.rs
crates/hydrofoil/src/policy/: cedar.rs  mod.rs
crates/hydrofoil/src/server/: metadata.rs
crates/hydrofoil/src/session/: log_store.rs  mod.rs
crates/hydrofoil/src/telemetry/: object_store.rs
crates/lineage-service/: Cargo.toml  Dockerfile  README.md
crates/lineage-service/src/: config.rs  http.rs  lib.rs  main.rs
crates/lineage-service/src/ingest/: converter.rs  mod.rs
crates/lineage-service/src/proto/: lineage.v1.rs  mod.rs
crates/lineage-service/src/read/: http.rs  mod.rs  model.rs  queries.rs
crates/lineage-service/src/writer/: buffered.rs  delta.rs  iceberg.rs  mod.rs  schema.rs  sink.rs  unity.rs  unity_external.rs  unity_managed.rs
crates/lineage-service/tests/: iceberg_integration_test.rs  integration_test.rs  read_test.rs
crates/open-lineage/: Cargo.toml  PUBLISHING.md  README.md
crates/open-lineage/src/: builder.rs  client.rs  cloud.rs  column.rs  config.rs  context.rs  event.rs  exec.rs  extract.rs  facets.rs  lib.rs  naming.rs  planner.rs  rule.rs  session.rs  transport.rs
crates/open-lineage/tests/: column_lineage.rs  conformance.rs  lineage.rs  marquez_acceptance.rs
crates/open-lineage/tests/schemas/openlineage/: README.md
crates/policy/: Cargo.toml  README.md  buf.gen.yaml
crates/policy/cedar/: hydrofoil.cedarschema
crates/policy/src/: lib.rs
crates/policy/src/oci/: mod.rs
crates/portal/: Cargo.toml  README.md  buf.gen.yaml  buf.yaml
crates/portal/proto/portal/files/v1/: svc.proto
crates/portal/proto/portal/tags/v1/: models.proto  svc.proto
crates/portal/src/: config.rs  error.rs  lib.rs  main.rs
crates/portal/src/service/: files.rs  mod.rs  tag_assignments.rs  tag_policies.rs
crates/portal/src/store/: local.rs  memory.rs  mod.rs  routing.rs  unity.rs
crates/portal/tests/: connect_e2e.rs
docker/: Dockerfile
docs/: duckdb-uc-managed-tables.md  monaco-sql-worker-tauri.md  open-lineage-design.md  platform-policy-architecture.md  policy-architecture.d2  policy-enforcement-design.md  policy-fact-gathering.md  portable-uc-components-carveout-prompt.md  portable-uc-components.md  session-management.md
environments/: .gitignore  azurite.compose.yaml  compose.local.yaml  compose.yaml  live.compose.yaml  tauri.compose.yaml
environments/docker/marimo/: .dockerignore  Dockerfile  Dockerfile.dockerignore  marimo.toml  pyproject.toml  resolve-spark-jars.sh
environments/docker/marimo/wheels/: .gitignore  README.md  unitycatalog_client-0.0.1-cp39-abi3-manylinux_2_28_aarch64.whl  unitycatalog_client-0.0.1-cp39-abi3-manylinux_2_28_x86_64.whl
node/: biome.json  justfile  package-lock.json  package.json
node/desktop/src-tauri/: Cargo.toml  tauri.conf.json
node/desktop/src-tauri/capabilities/: default.json
node/desktop/src-tauri/icons/: icon.icns
node/desktop/src-tauri/src/: commands.rs  env.rs  kek.rs  lib.rs  main.rs  modules.rs  notebook.rs  paths.rs  supervisor.rs  telemetry.rs  topology.rs  uc.rs
notebooks/: .env.example  .gitignore  README.md  _caspers_read.py  _demo_auth.py  caspers_gen.py  caspers_load.py  caspers_load_hydrofoil.py  client.py  column_lineage.py  duckdb_flight.py  lineage_metadata.py  policy_demo.py  pyproject.toml  spark_lineage.py  stage1_marketplace.py  stage2_governance.py  stage3_metric_views.py  stage4_lineage_classification.py  stage5_predict_act.py  uc_crud.py  uc_duckdb.py  uc_managed.py
notebooks_local/: _demo_auth.py  caspers_emit_lineage.py  caspers_load.py  caspers_load_hydrofoil.py  drop_caspers_test2.py  lineage_graph.py  lineage_graph_schema.json  policy_demo.py
scripts/: azurite-seed.sh  dev-desktop.sh  dev-ui.sh  generate-notation-certs.sh  projecss_jsonschema.py  setup-notation-client.sh  test-notation-signing.sh  uc-config.dev.yaml.tmpl  update-openapi.mts  upload-certs-to-zot.sh
(+338 files in other folders)
