[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
arrow = "57.1"
arrow-array = { version = "57.1" }
arrow-flight = { version = "57.1", features = ["flight-sql-experimental"] }
arrow-schema = { version = "57.1" }
arrow-select = { version = "57.1" }
async-trait = { version = "^0.1.89" }
bytes = { version = "1" }
cedar-local-agent = "3.0.0"
cedar-policy = { version = "4.8.2", features = ["protobufs"] }
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.19"
datafusion = "52.1"
datafusion-common = "52.1"
datafusion-expr = "52.1"
datafusion-tracing = "52"
delta_kernel = { version = "0.19.0", features = ["internal-api", "arrow-57"] }
futures = "0.3.32"
itertools = "0.14"
object_store = { version = "^0.12.4", features = ["azure", "aws", "gcp"] }
prost = { version = "0.14.1" }
serde = { version = "1", features = ["derive"] }
sqlparser = { version = "0.59", default-features = false, features = [
    "std",
    "visitor",
] }
thiserror = { version = "2" }
tokio = { version = "1.47", features = ["macros", "rt", "sync"] }
tonic = "0.14.1"
tonic-prost = "0.14.3"
tonic-tracing-opentelemetry = "0.32.0"
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
    "serde",
    "std",
], default-features = false }

cloud-client = { path = "../unitycatalog-rs/crates/cloud-client" }
unitycatalog-common = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "1470778c9db75e904b53ce7fbd3456539cd5ffe4", features = [
    "rest-client",
    "axum",
] }
# unitycatalog-common = { path = "../unitycatalog-rs/crates/common", features = [
#     "rest-client",
#     "axum",
# ] }
# https://github.com/unitycatalog-incubator/unitycatalog-rs
# deltalake-core = { path = "../delta-rs/crates/core", features = [
#     "datafusion",
#     "cloud",
#     "tracing",
# ] }
deltalake-core = { git = "https://github.com/roeap/delta-rs", rev = "a1552061d15e5d27bffebae92f1ea7459a89abb0", features = [
    "datafusion",
    "cloud",
    "tracing",
] }
# a1552061d15e5d27bffebae92f1ea7459a89abb0

[workspace.metadata.typos]
default.extend-ignore-re = [
    # Custom ignore regex patterns: https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
    "(?s)//\\s*spellchecker:ignore-next-line[^\\n]*\\n[^\\n]*",
    # Line block with # spellchecker:<on|off>
    "(?s)(#|//|<\\!--)\\s*spellchecker:off.*?\\n\\s*(#|//|<\\!--)\\s*spellchecker:on",
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
]
files.extend-exclude = [
    "crates/common/src/models/gen/**/*",
    "app/src/gen/**/*",
    "openapi/**/*",
]

[workspace.metadata.typos.default.extend-words]
# to avoid having to name fields r#type
typ = "typ"
