[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
arrow = "58"
arrow-array = { version = "58" }
arrow-flight = { version = "58", features = ["flight-sql-experimental"] }
arrow-schema = { version = "58" }
arrow-select = { version = "58" }
async-trait = { version = "^0.1.89" }
bytes = { version = "1" }
cedar-local-agent = "3.0.0"
cedar-policy = { version = "4.8.2", features = ["protobufs"] }
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.19"
dashmap = "6.0.1"
datafusion = "53.1"
datafusion-common = "53.1"
datafusion-expr = "53.1"
datafusion-tracing = "53"
# Track the same kernel source as the delta-rs fork (roeap/delta-rs) so the
# whole graph resolves to a single buoyant_kernel version — otherwise hydrofoil
# (which uses these types directly) and delta-rs disagree on the Engine/Field
# kernel API.
delta_kernel = { package = "buoyant_kernel", git = "https://github.com/buoyant-data/delta-kernel-rs", branch = "buoyant/main", features = [
    "internal-api",
    "arrow-58",
] }
futures = "0.3.32"
itertools = "0.14"
object_store = { version = "0.13.2", features = ["azure", "aws", "gcp"] }
olai-http = { version = "0.0.1" }
ordered-float = { version = "5" }
prost = { version = "0.14.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlparser = { version = "0.61", default-features = false, features = [
    "std",
    "visitor",
] }
thiserror = { version = "2" }
tokio = { version = "1.47", features = ["macros", "rt", "sync"] }
tonic = "0.14.1"
tonic-prost = "0.14.3"
tonic-tracing-opentelemetry = "0.32.0"
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
    "serde",
    "std",
], default-features = false }
uuid = { version = "1", features = ["v4"] }

unitycatalog-common = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "8e86500eb5a64e8c811f440cccfa9b8138c83550", features = [
    "rest-client",
    "axum",
] }
unitycatalog-client = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "8e86500eb5a64e8c811f440cccfa9b8138c83550" }
unitycatalog-object-store = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "8e86500eb5a64e8c811f440cccfa9b8138c83550" }
datafusion-unitycatalog = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "8e86500eb5a64e8c811f440cccfa9b8138c83550" }
deltalake-core = { git = "https://github.com/roeap/delta-rs", rev = "6825c1823d8a04290cfe19b8cf6b518cd0e6db34", features = ["datafusion", "cloud"] }
deltalake = { git = "https://github.com/roeap/delta-rs", rev = "6825c1823d8a04290cfe19b8cf6b518cd0e6db34", features = ["datafusion"] }

[patch.crates-io]
deltalake-core = { git = "https://github.com/roeap/delta-rs", rev = "6825c1823d8a04290cfe19b8cf6b518cd0e6db34" }
deltalake = { git = "https://github.com/roeap/delta-rs", rev = "6825c1823d8a04290cfe19b8cf6b518cd0e6db34" }
