[package]
name = "hydrofoil-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hydrofoil-common = { path = "../common" }

arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tonic = { workspace = true }
tracing = { workspace = true }
