[package]
name = "hydrofoil-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hydrofoil-common = { path = "../common" }

arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
bytes = { workspace = true }
datafusion-common = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tonic = { workspace = true }

# TPC-DS feature dependencies
deltalake-core = { workspace = true, optional = true }

[dev-dependencies]
rstest = { version = "0.26.1" }

[features]
default = ["tpcds"]
tpcds = ["deltalake-core"]
