[package]
name = "hydrofoil-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
delta_kernel = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
