[package]
name = "deltalake-datafusion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
url = { workspace = true }

datafusion-unitycatalog = { workspace = true }
unitycatalog-client = { workspace = true }
unitycatalog-common = { workspace = true }
unitycatalog-object-store = { workspace = true }

[dev-dependencies]
deltalake-core = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
