[package]
name = "deltalake-datafusion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
ordered-float = { workspace = true }
sqlparser = { workspace = true }
url = { workspace = true }

# Owns the Unity Catalog DDL statement types + planner; this crate's parser
# produces those statements and re-exports the types as its SQL facade.
datafusion-unitycatalog = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
deltalake-core = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Used by the live-UC `unity_resolve` integration test (catalog resolution).
unitycatalog-common = { workspace = true }
unitycatalog-object-store = { workspace = true }
