[package]
name = "env-modules"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pure dependency resolution for desktop environment service modules"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
