[package]
name = "hydrofoil"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
hydrofoil-common = { path = "../common" }

arrow = { workspace = true }
arrow-flight = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
datafusion-tracing = { workspace = true }
deltalake-core = { workspace = true, features = ["datafusion", "cloud"] }
delta_kernel = { workspace = true }
itertools = { workspace = true }
object_store = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tonic = { workspace = true }
tonic-tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }
unitycatalog-common = { workspace = true }
url = { workspace = true }

async-trait = { version = "^0.1.89" }
dashmap = "6.0.1"
futures = "0.3"
instrumented-object-store = "51.0.0"
mimalloc = { version = "0.1", default-features = false }
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "fmt",
    "env-filter",
] }
# sqlparser = { version = "0.55.0", default-features = false, features = [
#     "std",
#     "visitor",
# ] }
uuid = { version = "1.17", features = ["v4", "v7"] }
