[package]
name = "hydrofoil"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
datafusion-open-lineage = { path = "../open-lineage" }
datafusion-cedar = { path = "../datafusion-cedar" }
deltalake-datafusion = { path = "../datafusion" }
hydrofoil-common = { path = "../common" }
cedar-oci = { path = "../cedar-oci" }

arrow = { workspace = true }
arrow-flight = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
datafusion-tracing = { workspace = true }
delta_kernel = { workspace = true }
deltalake-core = { workspace = true, features = ["datafusion", "cloud"] }
itertools = { workspace = true }
object_store = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tonic = { workspace = true }
tonic-tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }
unitycatalog-client = { workspace = true }
unitycatalog-common = { workspace = true }
unitycatalog-object-store = { workspace = true }
url = { workspace = true }

dashmap = "6.0.1"
futures = "0.3"
instrumented-object-store = "53.0.0"
mimalloc = { version = "0.1", default-features = false }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "fmt",
    "env-filter",
] }
# sqlparser = { version = "0.55.0", default-features = false, features = [
#     "std",
#     "visitor",
# ] }
uuid = { version = "1.17", features = ["v4", "v7"] }

[features]
default = []
# Fine-grained governance (row filters + column masks) via Cedar partial
# evaluation. The coarse Cedar access gate is always available through the
# `datafusion-cedar` dependency; this feature opts into the Layer 2 machinery.
governance = ["datafusion-cedar/governance"]
