[package]
name = "lineage-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
buffa = { version = "0.7", features = ["json"] }
buffa-types = { version = "0.7", features = ["json"] }
deltalake = { workspace = true, features = ["datafusion"] }
# Iceberg sink — opt-in via the `iceberg` feature (off by default). It is NOT
# part of the default build because iceberg 0.9.1 / iceberg-catalog-rest 0.9.1
# pull arrow/parquet 57 and the sink's own `parquet` dep is 55, while the Delta
# path runs on arrow 58 (via `deltalake`). Reconciling that three-way skew is a
# tracked follow-up; until then the default graph stays single-arrow-58.
iceberg = { version = "0.9.1", optional = true }
iceberg-catalog-rest = { version = "0.9.1", optional = true }
parquet = { version = "55", optional = true }
# Unity Catalog sinks — opt-in via the `unity` feature (off by default). The
# `delta` feature on datafusion-unitycatalog gates its `managed` module (the
# catalog-managed committer + connector). All resolve to the same delta-rs fork
# rev as `deltalake`, so there is no version skew.
unitycatalog-client = { workspace = true, optional = true }
unitycatalog-object-store = { workspace = true, optional = true }
datafusion-unitycatalog = { workspace = true, optional = true, features = ["delta"] }
object_store = { workspace = true, optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = "1"
http-body = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { workspace = true }
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[features]
default = ["unity"]
# Build the Apache Iceberg sink. Currently requires resolving the arrow/parquet
# version skew noted above before it will compile.
iceberg = ["dep:iceberg", "dep:iceberg-catalog-rest", "dep:parquet"]
# Build the Unity Catalog Delta sinks (`unity-external` + `unity-managed` modes).
unity = [
    "dep:unitycatalog-client",
    "dep:unitycatalog-object-store",
    "dep:datafusion-unitycatalog",
    "dep:object_store",
]

[dev-dependencies]
tempfile = "3"
# For exercising the read router over HTTP in tests (ServiceExt::oneshot), which
# catches route-syntax regressions the direct store-call tests can't.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
