[package]
name = "datafusion-open-lineage"
description = "OpenLineage integration for Apache DataFusion sessions"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7", "serde"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

olai-http = { workspace = true, optional = true }
reqwest = { version = "0.12", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = ["http"]
http = ["dep:olai-http", "dep:reqwest", "dep:serde_yaml"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
