[package]
name = "hydrofoil-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
datafusion-expr = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

cedar-policy = "4.8.2"
