[project]
name = "open-lakehouse-notebooks"
version = "0.0.0"
description = "Baked dependency set for the open-lakehouse marimo notebook server."
requires-python = ">=3.13"
dependencies = [
    "marimo[sql]>=0.23.8",
    # DuckDB UC path (uc_duckdb.py)
    "duckdb>=1.5.0",
    # Spark + Delta path (uc_crud.py, uc_managed.py, uc_duckdb.py) — needs a JRE
    # in the image (installed in the Dockerfile runtime stage). Pinned to the latest
    # stable 4.1 line: pyspark 4.1.2 (4.2.0 is still preview), delta-spark 4.1.0 — the
    # python pkg versions MUST match the jars baked into the image (Dockerfile `jars`
    # stage) or sessions fail with NoSuchMethodError/ClassNotFound. 4.1 also unlocks
    # Spark Declarative Pipelines (pyspark.pipelines), absent from 4.0.x.
    "delta-spark==4.1.0",
    "pyspark==4.1.2",
    # Flight SQL / ADBC client path (client.py, policy_demo.py)
    "adbc-driver-flightsql>=1.9.0",
    "deltalake>=1.3.0",
    "pyarrow",
    # UC REST calls
    "requests",
    # language server python
    "ty>=0.0.40",
    "openai>=2.38.0",
    "ruff>=0.15.15",
    "polars>=1.41.2",
    # Native Unity Catalog client (PyO3). Built locally from the sibling
    # unitycatalog-rs repo (`just build-py-wheels`) and resolved from the
    # find-links wheel dir below — see wheels/README.md and the Dockerfile.
    "unitycatalog-client",
]

[tool.uv]
package = false

# unitycatalog-client is not on any index; resolve it from the local wheels/ dir.
# The Dockerfile also sets UV_FIND_LINKS=/wheels so the same source is reachable
# inside the build. Both arch wheels (amd64 + arm64) live in wheels/.
[tool.uv.sources]
unitycatalog-client = { index = "uc-wheels" }

[[tool.uv.index]]
name = "uc-wheels"
url = "./wheels"
format = "flat"
