[package]
name = "open-lakehouse-desktop"
version = "0.1.0"
description = "Open Lakehouse desktop shell"
edition = "2021"

# Standalone workspace: the empty table detaches this crate from the repo-root
# Cargo workspace (members = ["crates/*"]) so Tauri's webview dependency graph is
# never pulled into the server/CI builds. Reusing a server crate later is still
# possible via a path dependency, e.g.:
#   portal = { path = "../../../crates/portal" }
# (a path dep works across workspace boundaries without joining the workspace).
[workspace]

[lib]
# Tauri v2 mobile-ready convention: the binary defers to this lib's run().
name = "open_lakehouse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Native file picker for the "create table from file" flow (returns a local path
# the in-process engine reads).
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# In-process service executors (portal Tags + Files, hydrofoil QueryService).
# A path dependency works across the workspace boundary without joining the
# (empty) standalone workspace above.
desktop-host = { path = "../../../crates/desktop-host" }
portal = { path = "../../../crates/portal" }
connectrpc = { version = "0.7", features = ["server", "client"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bytes = "1"
http = "1"
futures = "0.3"
# HTTP client for the Unity Catalog REST proxy (forwards the UI's /api calls to
# the spawned uc server on its dynamic port). rustls to avoid a system TLS dep.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Local key management for the per-environment UC KEK (see src/kek.rs):
# - `keyring` stores the 32-byte KEK in the OS-native secret store (macOS Keychain,
#   Windows Credential Manager, Linux Secret Service) so it never lands on disk.
# - `getrandom` draws the key material from the OS CSPRNG.
# - `base64` encodes it in the form the UC server expects.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
getrandom = "0.2"
base64 = "0.22"
